--- a/ajustes.html
+++ b/ajustes.html
@@ -136,7 +136,7 @@
                                 <img src="images/avatar3.png" class="imagenAvatarAjustes bps">
                             </div>
                             <div class="uploadWrapper">
-                                <label for="fileLoader">Cargar nueva imagen</label>
+                                <label for="fileLoader" class="labelCargar">Cargar nueva imagen</label>
                                 <div id="fileLoader" class="file-upload">
                                     <input type="file" />
                                     <i class="fa fa-arrow-up"></i>
@@ -145,19 +145,18 @@
                         </div>
                         <div class="ajustesCol2">
                             <input id="inputAjustesApellido" type="text" class="inputField spacer2"
-                                placeholder="Apellido">
-                            <input id="inputAjustesNombre" type="text" class="inputField spacer2" placeholder="Nombre">
+                                placeholder="Apellido" disabled>
+                            <input id="inputAjustesNombre" type="text" class="inputField spacer2" placeholder="Nombre" disabled>
                             <input id="inputAjustesDate" type="text" class="inputField spacer2"
-                                placeholder="Fecha de Nacimiento (dd/mm/aaaa)">
-                            <input id="inputAjustesDNI" type="text" class="inputField spacer2" placeholder="DNI">
-                            <input id="inputAjustesPhone" type="text" class="inputField spacer2" placeholder="Telefono">
-                            <input id="inputAjustesEmail" type="email" class="inputField spacer2" placeholder="Email">
+                                placeholder="Fecha de Nacimiento (dd/mm/aaaa)" disabled>
+                            <input id="inputAjustesDNI" type="text" class="inputField spacer2" placeholder="DNI" disabled>
+                            <input id="inputAjustesPhone" type="text" class="inputField spacer2" placeholder="Telefono" disabled>
+                            <input id="inputAjustesEmail" type="email" class="inputField spacer2" placeholder="Email" disabled>
                             <input id="inputAjustesPass" type="password" class="inputField spacer2"
-                                placeholder="Password">
+                                placeholder="Password" disabled>
                         </div>
+                       <!--
                         <div class="ajustesCol3">
-
-
                             <div class="contenedorTabla">
                                 <table>
                                     <thead>
@@ -253,6 +252,7 @@
                             </div>
 
                         </div>
+                        -->
                 </div>
 
 
