--- a/mascotas.html
+++ b/mascotas.html
@@ -197,6 +197,7 @@
                                 <th scope="col">Raza</th>
                                 <th scope="col">Genero</th>
                                 <th scope="col">Ciudad</th>
+                                <th scope="col">Detalles</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -208,6 +209,7 @@
                                 <td data-label="Raza">Sin Raza</td>
                                 <td data-label="Raza">Masculino</td>
                                 <td data-label="Ciudad">Rosario</td>
+                                <td data-label="Detalles"><a href="detalleMascota.html" class="linkNoStyle">Ver detalles</a></td>
                             </tr>
                             <tr>
                                 <td scope="row" data-label="ID">####</td>
@@ -217,205 +219,9 @@
                                 <td data-label="Raza">Sin Raza</td>
                                 <td data-label="Raza">Femenino</td>
                                 <td data-label="Ciudad">Rosario</td>
+                                <td data-label="Detalles"><a href="detalleMascota.html" class="linkNoStyle">Ver detalles</a></td>
                             </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">perr1</td>
-                                <td data-label="Tipo">Perro</td>
-                                <td data-label="Tamaño">Mediano</td>
-                                <td data-label="Raza">Sin Raza</td>
-                                <td data-label="Raza">Masculino</td>
-                                <td data-label="Ciudad">Rosario</td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">gat1</td>
-                                <td data-label="Tipo">Gato</td>
-                                <td data-label="Tamaño">Pequeño</td>
-                                <td data-label="Raza">Sin Raza</td>
-                                <td data-label="Raza">Femenino</td>
-                                <td data-label="Ciudad">Rosario</td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">perr1</td>
-                                <td data-label="Tipo">Perro</td>
-                                <td data-label="Tamaño">Mediano</td>
-                                <td data-label="Raza">Sin Raza</td>
-                                <td data-label="Raza">Masculino</td>
-                                <td data-label="Ciudad">Rosario</td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">gat1</td>
-                                <td data-label="Tipo">Gato</td>
-                                <td data-label="Tamaño">Pequeño</td>
-                                <td data-label="Raza">Sin Raza</td>
-                                <td data-label="Raza">Femenino</td>
-                                <td data-label="Ciudad">Rosario</td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">perr1</td>
-                                <td data-label="Tipo">Perro</td>
-                                <td data-label="Tamaño">Mediano</td>
-                                <td data-label="Raza">Sin Raza</td>
-                                <td data-label="Raza">Masculino</td>
-                                <td data-label="Ciudad">Rosario</td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">gat1</td>
-                                <td data-label="Tipo">Gato</td>
-                                <td data-label="Tamaño">Pequeño</td>
-                                <td data-label="Raza">Sin Raza</td>
-                                <td data-label="Raza">Femenino</td>
-                                <td data-label="Ciudad">Rosario</td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">perr1</td>
-                                <td data-label="Tipo">Perro</td>
-                                <td data-label="Tamaño">Mediano</td>
-                                <td data-label="Raza">Sin Raza</td>
-                                <td data-label="Raza">Masculino</td>
-                                <td data-label="Ciudad">Rosario</td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">gat1</td>
-                                <td data-label="Tipo">Gato</td>
-                                <td data-label="Tamaño">Pequeño</td>
-                                <td data-label="Raza">Sin Raza</td>
-                                <td data-label="Raza">Femenino</td>
-                                <td data-label="Ciudad">Rosario</td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">perr1</td>
-                                <td data-label="Tipo">Perro</td>
-                                <td data-label="Tamaño">Mediano</td>
-                                <td data-label="Raza">Sin Raza</td>
-                                <td data-label="Raza">Masculino</td>
-                                <td data-label="Ciudad">Rosario</td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">gat1</td>
-                                <td data-label="Tipo">Gato</td>
-                                <td data-label="Tamaño">Pequeño</td>
-                                <td data-label="Raza">Sin Raza</td>
-                                <td data-label="Raza">Femenino</td>
-                                <td data-label="Ciudad">Rosario</td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">perr1</td>
-                                <td data-label="Tipo">Perro</td>
-                                <td data-label="Tamaño">Mediano</td>
-                                <td data-label="Raza">Sin Raza</td>
-                                <td data-label="Raza">Masculino</td>
-                                <td data-label="Ciudad">Rosario</td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">gat1</td>
-                                <td data-label="Tipo">Gato</td>
-                                <td data-label="Tamaño">Pequeño</td>
-                                <td data-label="Raza">Sin Raza</td>
-                                <td data-label="Raza">Femenino</td>
-                                <td data-label="Ciudad">Rosario</td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">perr1</td>
-                                <td data-label="Tipo">Perro</td>
-                                <td data-label="Tamaño">Mediano</td>
-                                <td data-label="Raza">Sin Raza</td>
-                                <td data-label="Raza">Masculino</td>
-                                <td data-label="Ciudad">Rosario</td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">gat1</td>
-                                <td data-label="Tipo">Gato</td>
-                                <td data-label="Tamaño">Pequeño</td>
-                                <td data-label="Raza">Sin Raza</td>
-                                <td data-label="Raza">Femenino</td>
-                                <td data-label="Ciudad">Rosario</td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">perr1</td>
-                                <td data-label="Tipo">Perro</td>
-                                <td data-label="Tamaño">Mediano</td>
-                                <td data-label="Raza">Sin Raza</td>
-                                <td data-label="Raza">Masculino</td>
-                                <td data-label="Ciudad">Rosario</td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">gat1</td>
-                                <td data-label="Tipo">Gato</td>
-                                <td data-label="Tamaño">Pequeño</td>
-                                <td data-label="Raza">Sin Raza</td>
-                                <td data-label="Raza">Femenino</td>
-                                <td data-label="Ciudad">Rosario</td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">perr1</td>
-                                <td data-label="Tipo">Perro</td>
-                                <td data-label="Tamaño">Mediano</td>
-                                <td data-label="Raza">Sin Raza</td>
-                                <td data-label="Raza">Masculino</td>
-                                <td data-label="Ciudad">Rosario</td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">gat1</td>
-                                <td data-label="Tipo">Gato</td>
-                                <td data-label="Tamaño">Pequeño</td>
-                                <td data-label="Raza">Sin Raza</td>
-                                <td data-label="Raza">Femenino</td>
-                                <td data-label="Ciudad">Rosario</td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">perr1</td>
-                                <td data-label="Tipo">Perro</td>
-                                <td data-label="Tamaño">Mediano</td>
-                                <td data-label="Raza">Sin Raza</td>
-                                <td data-label="Raza">Masculino</td>
-                                <td data-label="Ciudad">Rosario</td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">gat1</td>
-                                <td data-label="Tipo">Gato</td>
-                                <td data-label="Tamaño">Pequeño</td>
-                                <td data-label="Raza">Sin Raza</td>
-                                <td data-label="Raza">Femenino</td>
-                                <td data-label="Ciudad">Rosario</td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">perr1</td>
-                                <td data-label="Tipo">Perro</td>
-                                <td data-label="Tamaño">Mediano</td>
-                                <td data-label="Raza">Sin Raza</td>
-                                <td data-label="Raza">Masculino</td>
-                                <td data-label="Ciudad">Rosario</td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">gat1</td>
-                                <td data-label="Tipo">Gato</td>
-                                <td data-label="Tamaño">Pequeño</td>
-                                <td data-label="Raza">Sin Raza</td>
-                                <td data-label="Raza">Femenino</td>
-                                <td data-label="Ciudad">Rosario</td>
-                            </tr>
+
                         </tbody>
                     </table>
                 </div>
