--- a/detallePersona.html
+++ b/detallePersona.html
@@ -116,6 +116,7 @@
                 <img class="userPic bps" src="images/avatar3.png" alt="profile image">
             </div>
             <div class="realContent">
+                <p class="indicadorPagina">Detalles de <span id="nombreDetalle">NOMBRE DE PERSONA</span></p>
 
                 <div class="togglerFilteringPosition">
                     <div id="toggleF">
@@ -123,116 +124,65 @@
                     </div>
                 </div>
 
-                <p class="indicadorPagina">Personas</p>
-
                 <div id="contenedorFiltros" class="closedFiltering">
 
-                    <div class="miniContainer">
-                        <label for="filterNamePerso">Nombre</label>
-                        <input type="text" id="filterNamePerso" name="filterName"
-                            placeholder="Ingrese un Nombre para buscar">
-                    </div>
-
-                    <div class="miniContainer">
-                        <label for="filterCityPerso">Ciudad</label>
-                        <select id="filterCityPerso" class="dropdown">
-                            <option>All</option>
-                            <option>Rosario</option>
-                        </select>
-                    </div>
-
-                    <button id="botonFiltrarMasco" class="butLog butLogSelect" onclick="myFunction()">Filtrar</button>
-                    <button id="botonAddMasco" class="butLog butLogSelect"
-                        onclick="DialogAddPersona.showModal()">Agregar
-                        Persona</button>
+                    <button id="botonBorrarPersona" class="butLog butLogSelect" onclick="DialogBorrarPersona.showModal()">Borrar Persona</button>
 
                 </div>
 
-                <div id="tabContePerso" class="contenedorTabla">
-                    <table>
-                        <thead>
-                            <tr>
-                                <th scope="col">ID</th>
-                                <th scope="col">Nombre</th>
-                                <th scope="col">Ciudad</th>
-                                <th scope="col">Dirección</th>
-                                <th scope="col">Telefono</th>
-                                <th scope="col">Email</th>
-                                <th scope="col">Detalles</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">Refugio 4</td>
-                                <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">domicilio X</td>
-                                <td data-label="Telefono">123456789</td>
-                                <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Detalles"><a href="detallePersona.html" class="linkNoStyle">Ver detalles</a></td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">Refugio 4</td>
-                                <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">domicilio X</td>
-                                <td data-label="Telefono">123456789</td>
-                                <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Detalles"><a href="detallePersona.html" class="linkNoStyle">Ver detalles</a></td>
-                            </tr>
+                <div class=" mainviewAjustes">
+                        <div class="ajustesCol1">
+                            <div class="imgAjustesConte">
+                                <img src="images/avatar4.png" class="imagenAvatarAjustes bps">
+                            </div>
+                            <div class="uploadWrapper">
+                                <label for="fileLoader" class="labelCargar">Cargar nueva imagen</label>
+                                <div id="fileLoader" class="file-upload">
+                                    <input type="file" />
+                                    <i class="fa fa-arrow-up"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="ajustesCol2">
+                            <input id="inputAjustesApellido" type="text" class="inputField spacer2"
+                                placeholder="Apellido" disabled>
+                            <input id="inputAjustesNombre" type="text" class="inputField spacer2" placeholder="Nombre"
+                                disabled>
+                            <input id="inputAjustesDate" type="text" class="inputField spacer2"
+                                placeholder="Fecha de Nacimiento (dd/mm/aaaa)" disabled>
+                            <input id="inputAjustesDNI" type="text" class="inputField spacer2" placeholder="DNI"
+                                disabled>
+                            <input id="inputAjustesPhone" type="text" class="inputField spacer2" placeholder="Telefono"
+                                disabled>
+                            <input id="inputAjustesEmail" type="email" class="inputField spacer2" placeholder="Email"
+                                disabled>
+                            
+                        </div>
 
-                        </tbody>
-                    </table>
+
                 </div>
+
 
             </div>
         </div>
+
+
+
     </div>
 
-    <dialog id="DialogAddPersona" class="modal">
+    <dialog id="DialogBorrarPersona" class="modal">
         <form method="dialog">
             <header>
-                <div class="modalTitle">Agregar Persona</div>
+                <div class="modalTitle">Borrar Persona</div>
             </header>
             <section class="modalSeccionContainer">
 
-                <div class="miniContainer">
-                    <label for="inputAnimalName">Nombre</label>
-                    <input type="text" id="inputAnimalName" name="personaName"
-                        placeholder="Ingrese un nombre para la mascota">
-                </div>
-
-                <div class="miniContainer">
-                    <label for="filterTypeMasco">Ciudad</label>
-                    <select id="filterTypeMasco" class="dropdown">
-                        <option>Select</option>
-                        <option>Gato</option>
-                        <option>Perro</option>
-                    </select>
-                </div>
-
-                <div class="miniContainer">
-                    <label for="inputAnimalName">Dirección</label>
-                    <input type="text" id="inputAnimalName" name="personaDir"
-                        placeholder="Ingrese una Dirección para la persona">
-                </div>
-
-                <div class="miniContainer">
-                    <label for="inputAnimalName">Telefono</label>
-                    <input type="text" id="inputAnimalName" name="personaTel"
-                        placeholder="Ingrese un telefono para la persona">
-                </div>
-
-                <div class="miniContainer">
-                    <label for="inputAnimalName">Email</label>
-                    <input type="email" id="inputAnimalName" name="personaEmail"
-                        placeholder="Ingrese un email para la persona">
-                </div>
+                <p>Esta seguro que quiere borrar esta persona?</p>
 
             </section>
             <footer>
                 <menu class="modalFooter">
-                    <a class="butLog spacer1" onclick="myFunction(), this.closest('dialog').close('cancel')">Agregar
+                    <a class="butLog spacer1" onclick="myFunction(), this.closest('dialog').close('cancel')">Borrar
                         Persona</a>
                     <a class="butLog butLogINV spacer1" autofocus type="reset"
                         onclick="this.closest('dialog').close('cancel')">Cancelar</a>
@@ -244,7 +194,6 @@
     <div id="toastOK">Cambio realizado con exito</div>
     <div id="toastNOT">Se produjo un error</div>
     <script src="script.js"></script>
-
 </body>
 
 </html>
